--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ python-dotenv
 pandas
 pypdf2
 google-generativeai
-protobuf==3.20.1
-proto-plus==1.19.8
+protobuf==3.20.3
+google-ai-generativelanguage
+proto-plus>=1.22.0
